@@ -1,10 +1,12 @@
 #include "config.h"
+#ifndef NO_CONFIGURE
 #define CFGDESC
 #include "ykey.h"
 #include "sysdep.h"
 
 void addWorkspace(const char *, const char *) {}
 void setLook(const char *, const char *) {}
+void addBgImage(const char *, const char *) {}
 
 //#include "bindkey.h"
 //#include "default.h"
@@ -13,18 +15,10 @@ void setLook(const char *, const char *) {}
 #include "yprefs.h"
 #include "bindkey.h"
 #include "default.h"
+#include "icewmbg_prefs.h"
 
-int main() {
-    unsigned int i;
-
-    printf("# preferences(%s) - generated by genpref\n\n", VERSION);
-    printf("# This file should be copied to /etc/icewm/ or $HOME/.icewm/ directory\n");
-    printf("# NOTE: All settings are commented out by default, be sure to\n"
-           "#       uncomment them if you change them!\n\n");
-
-    cfoption *options = icewm_preferences;
-#ifndef NO_CONFIGURE
-    for (i = 0; options[i].type != cfoption::CF_NONE; i++) {
+void show(cfoption *options) {
+    for (unsigned int i = 0; options[i].type != cfoption::CF_NONE; i++) {
         if (options[i].description)
             printf("#  %s\n", options[i].description);
 
@@ -60,7 +54,22 @@ int main() {
         if (options[i].description)
             puts("");
     }
+}
+#endif
+
+int main() {
+#ifndef NO_CONFIGURE
+    printf("# preferences(%s) - generated by genpref\n\n", VERSION);
+    printf("# This file should be copied to /etc/icewm/ or $HOME/.icewm/ directory\n");
+    printf("# NOTE: All settings are commented out by default, be sure to\n"
+           "#       uncomment them if you change them!\n\n");
+
+    show(icewm_preferences);
+
     // special case, for now
     puts("WorkspaceNames=\" 1 \", \" 2 \", \" 3 \", \" 4 \"");
+
+    puts("\n#\n# icewmbg preferences\n#\n");
+    show(icewmbg_prefs);
 #endif
 }
